# ProtobufferExample

./: CMakeLists.txt  README.md  conanfile.txt
proto/: Animal.proto
src/: main.cpp
